fixed wrong dimension of scrollbars

--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -35,14 +35,14 @@ h3 {
     position: relative;
 }
 .scroll {
-    padding: 30px;
+    padding: 0;
     position: relative;
 }
 .scroll {
     width: 900px;
 }
 .sc1 {
-    width: 1600px;
+    width: 510px;
 }
 ::-webkit-scrollbar {
     height: 0;
@@ -189,7 +189,7 @@ h3 {
 /* The thumb itself */
  .scrollbar.vertical .scrollbar-thumb {
     height: 50px;
-    background: #333;
+    background: rgba(0,0,0,0.8);
     position: absolute;
     top: 0;
     left: 2px;
@@ -268,7 +268,7 @@ h3 {
 /* The thumb itself */
  .scrollbar.horizontal .scrollbar-thumb {
     width: 50px;
-    background-color: #333;
+    background-color: rgba(0,0,0,0.8);
     position: absolute;
     top: 2px;
     left: 0;
